--- a/static/feed.css
+++ b/static/feed.css
@@ -6,7 +6,7 @@
     min-width: 320px;
     max-width: 600px;
     min-height: 200px;
-    margin: 5px auto;
+    margin: 0 auto 20px;
     background: white;
     align-content: center;
 }
