--- a/static/feed.css
+++ b/static/feed.css
@@ -30,8 +30,8 @@
 .feed-post__img {
     display: block;
     flex: 1;
-    max-height: 100%;
-    max-width: 100%;
+    max-height: 220px;
+    max-width: 220px;
     margin: auto;
     position: relative;
 }
