--- a/static/feed.css
+++ b/static/feed.css
@@ -54,11 +54,12 @@
 }
 
 .feed-post__panel__link {
-    min-height: 25px;
-    max-height: 25px;
-    min-width: 25px;
-    max-width: 25px;
-    border-radius: 10px;
+    min-height: 35px;
+    max-height: 35px;
+    min-width: 35px;
+    max-width: 35px;
+    border-radius: 15px;
+    display: block;
 }
 
 .feed-post__panel__dislike {
