--- a/static/feed.css
+++ b/static/feed.css
@@ -46,11 +46,13 @@
 .feed-post__panel__btn-container {
     diplay: flex;
     margin: 0 auto;
-    min-width: 100px;
+    min-width: 150px;
+    min-height: 50px;
 }
 
 .feed-post__panel__btn-container * {
     flex: 1;
+    margin: 5px;
 }
 
 .feed-post__panel__link {
