--- a/static/feed.css
+++ b/static/feed.css
@@ -44,7 +44,7 @@
 }
 
 .feed-post__panel__btn-container {
-    diplay: flex;
+    display: flex;
     margin: 0 auto;
     min-width: 150px;
     min-height: 50px;
