--- a/static/feed.css
+++ b/static/feed.css
@@ -21,7 +21,7 @@
 
 
 .feed-post__item-link {
-    display: flex;
+    display: block;
     margin: 2px;
     flex: 1;
     align-content: center;
@@ -29,7 +29,6 @@
 
 .feed-post__img {
     display: block;
-    flex: 1;
     max-height: 220px;
     max-width: 220px;
     margin: auto;
