--- a/static/feed.css
+++ b/static/feed.css
@@ -21,7 +21,7 @@
 
 
 .feed-post__item-link {
-    display: block;
+    display: flex;
     margin: 2px;
     flex: 1;
     align-content: center;
@@ -46,12 +46,13 @@
 .feed-post__panel__btn-container {
     display: flex;
     align-content: center;
+    justify-content: center;
     margin: 0 auto;
     min-width: 150px;
     min-height: 50px;
 }
 
-.feed-post__panel__btn-container * {
+.feed-post__panel__btn-container > * {
     flex: 1;
     margin: 5px;
 }
@@ -74,6 +75,12 @@
 }
 
 .feed-post__panel__score {
-    display: flex;
+    display: table;
     max-width: 50px;
+    margin: auto 0;
+}
+
+.feed-post__panel__score-text {
+    text-align: center;
+    display: block;
 }
