--- a/static/feed.css
+++ b/static/feed.css
@@ -62,20 +62,20 @@
     max-height: 35px;
     min-width: 35px;
     max-width: 35px;
-    border-radius: 15px;
+    cursor: pointer;
     display: block;
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
 }
 
-.feed-post__panel__dislike {
-    background: lightpink;
-}
-
-.feed-post__panel__like {
-    background: lightgreen;
-}
 
 .feed-post__panel__score {
     display: table;
+    min-width: 30px;
     max-width: 50px;
     margin: auto 0;
 }
