--- a/static/feed.css
+++ b/static/feed.css
@@ -1,11 +1,17 @@
+#page-container {
+    max-width: 600px;
+    min-width: 320px;
+    margin: 0 auto;
+}
+
 #feed {
     background: lavender;
-    margin-top: 55px;
+    margin-top: 20px;
 }
 
 .feed-post {
-    min-width: 320px;
-    max-width: 600px;
+    min-width: 100%;
+    max-width: 100%;
     min-height: 200px;
     margin: 0 auto 20px;
     background: white;
