--- a/templates/vote.html
+++ b/templates/vote.html
@@ -1,7 +1,7 @@
-<td class="vote-content">
-    <b class="save{% if post.saved==1 %}_active{% endif %}" onclick="save(this)"></b>
-    <div class="score">{{ post['saves'] }}</div>
-    <b class="dislike{% if post.vote==-1 %}_active{% endif %}" onclick="send_vote(this)"></b>
-    <div class="score">{{ post['votes'] }}</div>
-    <b class="like{% if post.vote==1 %}_active{% endif %}" onclick="send_vote(this)"></b>
-</td>
+    <td class="vote-content">
+        <b class="save{% if post['saved']==1 %}_active{% endif %}" onclick="save(this)"></b>
+        <div class="score">{{ post['saves'] }}</div>
+        <b class="dislike{% if post['vote']==-1 %}_active{% endif %}" onclick="send_vote(this)"></b>
+        <div class="score">{{ post['votes'] }}</div>
+        <b class="like{% if post['vote']==1 %}_active{% endif %}" onclick="send_vote(this)"></b>
+    </td>
